--- a/trabalho_flexbox/style.css
+++ b/trabalho_flexbox/style.css
@@ -20,7 +20,7 @@ div {
 #ex1 {
     display: flex;
     flex-direction: row; /* Alinha itens horizontalmente (padrão) */
-    background-color: antiquewhite;
+    background-color: aquamarine;
 }
 
 #ex2 {
@@ -33,36 +33,36 @@ div {
 #ex3{
     display: flex;
     justify-content: center; /* Itens alinhados no centro do eixo principal */
-    background-color: lightcyan;
+    background-color: rgb(230, 193, 109);
 }
 #ex4{
     display: flex;
     justify-content: space-between; /* Espaço igual entre itens */
-    background-color: lemonchiffon;
+    background-color: rgb(230, 193, 109);
 }
 #ex5{
     display: flex;
     justify-content: space-around; /* Espaço igual ao redor dos itens */
-    background-color: lavender;
+    background-color: rgb(230, 193, 109);
 }
 
 #ex6 {
     display: flex;
     justify-content: flex-end; /* Alinha itens ao final do eixo principal (horizontal) */
-    background-color: peru;
+    background-color: rgb(230, 193, 109);
 }
 
 /* Flexbox com comandos de flex-wrap */
 #ex7 {
     display: flex;
     flex-wrap: nowrap;
-    background-color: burlywood; 
+    background-color: rgb(227, 140, 204);
 }
 
 #ex8 {
     display: flex;
     flex-wrap: wrap;
-    background-color: aquamarine;
+    background-color: rgb(227, 140, 204);
 }
 
 #ex9 {
@@ -80,18 +80,19 @@ div {
 }
 #ex11 {
     display: flex;
-    flex-flow:column-reverse;
-    background-color: rgb(247, 127, 139); /* inverte a ordem dos itens */
+    flex-flow:column-reverse;/* inverte a ordem dos itens */
+    background-color: rgb(166, 140, 227); 
 }
 
 #ex12 {
     display: flex;
     flex-flow:row; /*itens ficam todos na vertical, no canto esquerdo*/
-    background-color: rgb(247, 127, 139);    
+    background-color: rgb(166, 140, 227);    
 }
 
 #ex13 {
     display: flex;
     flex-flow:row-reverse; /*itens ficam todos na vertical, na ordem contraria e no canto direito*/
-    background-color: rgb(224, 232, 114);    
+    background-color: rgb(166, 140, 227);    
 }
+
